--- a/backend/Bookstore/BookStore.Application/BookStore.Application.csproj
+++ b/backend/Bookstore/BookStore.Application/BookStore.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.0-preview.3.24172.13" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
 
